# INF33995-Robot

./: .gitignore  README.md  deploy.sh  docker-compose.yml  robot-start.sh
docker-robot/: Dockerfile  deploy-robot.sh
docker-simulation/: Dockerfile
file_transfer_ws/: output_file.txt
file_transfer_ws/rebuild_scripts/: rebuild-robot.sh  stdout.txt  update.sh
file_transfer_ws/src/file_server_bringup/: CMakeLists.txt  package.xml
file_transfer_ws/src/file_server_bringup/launch/: robot_bringup.launch.py
file_transfer_ws/src/files_server_simulation_bringup/: CMakeLists.txt  package.xml
file_transfer_ws/src/files_server_simulation_bringup/launch/: simulation.launch.py
file_transfer_ws/src/interfaces/: CMakeLists.txt
file_transfer_ws/src/py_files_server/: package.xml  setup.py
file_transfer_ws/src/py_files_server/py_files_server/: files_server.py  files_tree.py
file_transfer_ws/src/robot_bringup/: CMakeLists.txt
file_transfer_ws/src/robot_bringup/launch/: robot_bringup.launch.py
file_transfer_ws/src/simulation_bringup/: CMakeLists.txt  package.xml
pcl_ws/: launch.sh
pcl_ws/src/my_pcl_pkg/: CMakeLists.txt  package.xml
pcl_ws/src/my_pcl_pkg/include/my_pcl_pkg/: convert.h
pcl_ws/src/my_pcl_pkg/src/: convert.cpp  my_node.cpp  turtle_tf2_broadcaster.cpp
robot/: Dockerfile  clean_workspace.sh  deploy-robot.sh  docker-compose.yml  launch-robot.sh  miaw.sh  rebuild-robot.sh  setup-robot.sh
robot/docker-robot/: Dockerfile
robot/ssh_keys/: robot_ssh  robot_ssh.pub
ros_ws/: launch-gazebo.sh  launch.sh  start.sh
ros_ws/src/explore/config/: params_1.yaml  params_2.yaml  params_costmap.yaml  params_costmap_2.yaml  params_robot.yaml
ros_ws/src/explore/launch/: explore.launch.py  explore.launch2.py  robot_explore.launch.py
ros_ws/src/explore/src/: costmap_client.cpp  explore.cpp
ros_ws/src/interfaces/: CMakeLists.txt  package.xml
ros_ws/src/interfaces/msg/: LimoInfo.msg  LimoStatus.msg
ros_ws/src/interfaces/srv/: Identify.srv  Navigation.srv
ros_ws/src/limo_base/: CMakeLists.txt
ros_ws/src/limo_base/launch/: limo_base.launch.py  open_ydlidar_launch.py
ros_ws/src/limo_base/src/: limo_driver.cpp
ros_ws/src/limo_bringup/launch/: limo_start.launch.py
ros_ws/src/limo_bringup/param/: amcl_params.yaml  costmap_common.yaml  navigation2.yaml  ydlidar1.yaml  ydlidar2.yaml
ros_ws/src/limo_info/: package.xml  setup.cfg  setup.py
ros_ws/src/limo_info/launch/: limo_info.launch.py
ros_ws/src/limo_info/limo_info/: publisher.py
ros_ws/src/limo_state/: package.xml  setup.cfg  setup.py
ros_ws/src/mission_control/: package.xml  setup.py
ros_ws/src/mission_control/mission_control/: back_to_home.py  mission_switch_server.py  nav_to_pos.py  random_walk.py
ros_ws/src/nav_robot_bringup/: CMakeLists.txt  package.xml
ros_ws/src/nav_robot_bringup/config/: limo_diff_drive.rviz  localization_launch.py  mapper_params_online_async.yaml  nav2_params.yaml  navigation_launch.py
ros_ws/src/nav_robot_bringup/config1/: amcl_params.yaml  ekf.yaml  my_map_save copy.pgm  nav2_params.yaml  robot1_localization_launch.py  robot1_mapper_params_online_async.yaml  robot1_nav2_params.yaml  robot1_navigation_launch.py  robot1_online_async_launch.py  slam_toolbox_params.yaml  twist_mux.yaml
ros_ws/src/nav_robot_bringup/config2/: amcl_params.yaml  ekf.yaml  localization_launch.py  my_map_save.yaml  (+8 more)
ros_ws/src/navigation/: package.xml
ros_ws/src/py_exploration_server/: package.xml  setup.cfg  setup.py
ros_ws/src/py_files_server/: package.xml  setup.cfg  setup.py
ros_ws/src/py_files_service/: package.xml  setup.cfg  setup.py
ros_ws/src/py_identify_server/: package.xml  setup.py
ros_ws/src/py_navigate_server/: setup.cfg  setup.py
ros_ws/src/py_navigation_server/: package.xml  setup.cfg  setup.py
ros_ws/src/robot_bringup/: package.xml
ros_ws/src/ros_gz_description/: package.xml
ros_ws/src/ros_gz_gazebo/: CMakeLists.txt  package.xml
ros_ws/src/simulation_bringup/: CMakeLists.txt  package.xml
simulation/: Dockerfile  deploy-simulation.sh  nav2_depoly.sh  random_map_generator.py  start-files-server.sh
simulation/docker-simulation/: Dockerfile  deploy-simulation.sh
simulation/windows/: Dockerfile  deploy-simulation.sh  launch-docker.md
(+54 files in other folders)
