<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>file_server_bringup</name>
  <version>0.0.0</version>
  <description>Contains launch files for the ros_gz_example project</description>
  <maintainer email="majeed-abdul.baki@nasa.org">Majeed Abdul Baki</maintainer>
  <license>Apache 2.0</license>
  <author>Majeed Baki</author>

  <depend>joint_state_publisher_gui</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

